# catsay

./: Cargo.toml  README.md  catfile.txt  output.txt  stderr.txt
src/: main.rs
tests/: integration_test.rs
